WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99488
[chromium] Fix a bug that we are using scaled damage rect for plugins inside an iframe
https://bugs.webkit.org/show_bug.cgi?id=99488
Summary
[chromium] Fix a bug that we are using scaled damage rect for plugins inside ...
Min Qin
Reported
2012-10-16 12:22:12 PDT
Fix a bug that we are using scaled damage rect for plugins inside an iframe
Attachments
Patch
(2.43 KB, patch)
2012-10-16 12:33 PDT
,
Min Qin
no flags
Details
Formatted Diff
Diff
Patch
(2.43 KB, patch)
2012-10-16 12:37 PDT
,
Min Qin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Min Qin
Comment 1
2012-10-16 12:33:29 PDT
Created
attachment 168998
[details]
Patch
Min Qin
Comment 2
2012-10-16 12:37:41 PDT
Created
attachment 169000
[details]
Patch
Adam Barth
Comment 3
2012-10-16 13:12:23 PDT
Comment on
attachment 169000
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169000&action=review
Can we write a test for this change?
> Source/WebKit/chromium/src/WebPluginContainerImpl.cpp:142 > IntRect windowRect = > - IntRect(view->contentsToWindow(enclosingIntRect(scaledDamageRect))); > + IntRect(view->contentsToWindow(enclosingIntRect(scaledDamageRect).location()), enclosingIntRect(scaledDamageRect).size());
Can we change this to only call enclosingIntRect(scaledDamageRect) once? Also, there's no reason to have a line break after the =
Alexandre Elias
Comment 4
2012-10-16 14:27:58 PDT
This is for the "old" page scale path which we're planning to do away with as soon as feasible, so I'm not sure it's worth spending time on a test.
Adam Barth
Comment 5
2012-10-16 14:38:18 PDT
Comment on
attachment 169000
[details]
Patch Ok.
WebKit Review Bot
Comment 6
2012-10-16 15:08:41 PDT
Comment on
attachment 169000
[details]
Patch Clearing flags on attachment: 169000 Committed
r131514
: <
http://trac.webkit.org/changeset/131514
>
WebKit Review Bot
Comment 7
2012-10-16 15:08:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug