Fix a bug that we are using scaled damage rect for plugins inside an iframe https://bugs.webkit.org/show_bug.cgi?id=99488

Patch by Min Qin <qinmin@chromium.org> on 2012-10-16
Reviewed by Adam Barth.

There is a bug with a previous webkit patch: https://bugs.webkit.org/show_bug.cgi?id=98468
In that patch, we incorrectly applied the main frame's scale factor to inner iframes.
However, the damageRect is not scaled inside an iFrame. So doing the intersect will retrieve wrong result here.
In WebPluginContainerImpl::calculateGeometry, the windowRect also does not apply main frame's scale factor.

* src/WebPluginContainerImpl.cpp:
(WebKit::WebPluginContainerImpl::paint):

Canonical link: https://commits.webkit.org/117476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131514 268f45cc-cd09-0410-ab3c-d52691b4dbfc